k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hiremeplz
  labels:
    app.kubernetes.io/part-of: hiremeplz
